objects/ccrz__E_SubProdTermI18N__c.object
<CustomObject>
    <description>B2B Commerce product subscription localization definition.</description>
    <fields>
        <fullName>ccrz__CartDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Cart Display Name. Content in this field will override the content in the standard field.</description>
        <label>Cart Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__CartDisplayName__c</fullName>
        <description>Text used for Displaying subscription information in the Cart and during Checkout.  If this field is blank then Product Detail Display Name is used.</description>
        <label>Cart Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayNameRT__c</fullName>
        <description>Rich Text Version of the Display Name Field. Content in this field will override the content in the standard field.</description>
        <label>Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>The name of this subscription.  Used as a parameter for other Display Name fields.</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EmailDisplayNameRT__c</fullName>
        <description>Text used for Displaying subscription information in the order confirmation email. If this field is blank then will try to fall Back to Order Display Name followed by Cart Display Name followed by Product Detail Display Name.</description>
        <label>Email Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__EmailDisplayName__c</fullName>
        <description>Text used for Displaying subscription information in the order confirmation email. If this field is blank then will try to fall Back to Order Display Name followed by Cart Display Name followed by Product Detail Display Name.</description>
        <label>Email Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>The locale for which this localization applies.  Localization follows the normal B2B Commerce fallback rules.</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Order Display Name. Content in this field will override the content in the standard field.</description>
        <label>Order Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderDisplayName__c</fullName>
        <description>Text used for Displaying subscription information in the order.  If this field is blank then Product Detail Display Name is used.</description>
        <label>Order Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductDetailDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Product Detail Display Field. Content in this field will override the content in the standard field.</description>
        <label>Product Detail Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductDetailDisplayName__c</fullName>
        <description>Text used for Displaying subscription information on the product detail page.</description>
        <label>Product Detail Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductListDisplayNameRT__c</fullName>
        <description>For future use.  Do not use.</description>
        <label>Product List Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductListDisplayName__c</fullName>
        <description>For future use.  Do not use.</description>
        <label>Product List Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTerm__c</fullName>
        <description>The product subscription definition to which this localization applies.</description>
        <label>SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC SubProdTerm I18Ns</relationshipLabel>
        <relationshipName>SubProdTermI18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC SubProdTerm I18N</label>
    <nameField>
        <label>CC SubProdTerm I18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC SubProdTerm I18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>